# P2P-rust-chat

./: Cargo.toml  README.md
src/: crypto.rs  lib.rs  main.rs  network.rs  ui.rs
